[gd_scene load_steps=2 format=2]

[ext_resource path="res://PanelContainer.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.839966
margin_right = 0.839966
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 0.5
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollButton" type="Button" parent="."]
anchor_left = 0.763
anchor_top = 0.213
anchor_right = 0.964
anchor_bottom = 0.297
margin_left = 0.444946
margin_right = 0.444946
text = "SCROLLS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="epilepsyButton" type="Button" parent="."]
anchor_left = 0.763
anchor_top = 0.029
anchor_right = 0.964
anchor_bottom = 0.106
margin_left = -0.444946
margin_top = 0.444946
margin_right = -0.444946
margin_bottom = 0.444946
text = "EPILEPSY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="boxes within boxes" type="Button" parent="."]
anchor_left = 0.763
anchor_top = 0.393
anchor_right = 0.964
anchor_bottom = 0.48
margin_left = 0.471313
margin_right = 0.471313
text = "BOXES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DragButton" type="Button" parent="."]
anchor_left = 0.763
anchor_top = 0.58
anchor_right = 0.964
anchor_bottom = 0.681
margin_left = 0.471436
text = "DRAG"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ScrollButton" to="PanelContainer" method="_on_ScrollButton_pressed"]
[connection signal="pressed" from="epilepsyButton" to="PanelContainer" method="_on_epilepsyButton_pressed"]
[connection signal="pressed" from="boxes within boxes" to="PanelContainer" method="_on_boxes_within_boxes_pressed"]
[connection signal="pressed" from="DragButton" to="PanelContainer" method="_on_DragButton_pressed"]
